# PlanNatureza

./: .env  .env exemple  .gitignore  CRIA_VIEW.SQL  Pulso_v1.pptx  README.md  config.py  database.py  enviar_relatorios.py  gerar_relatorio.py  gerentes.csv  main.py  mapa_correcoes.json  pyproject.toml  requirements.txt
comunicacao/: enviar_relatorios.py
config/: config.py  inicializacao.py
docs/: dashboard_ACESSO_A_MERCADO_E_SERVIÇOS_FINANCEIROS.html  dashboard_ADMINISTRAÇÃO.html  dashboard_ALTO_TIETÊ.html  dashboard_ARARAQUARA.html  dashboard_ARAÇATUBA.html  dashboard_ATENDIMENTO_AO_CLIENTE.html  dashboard_AUDITORIA.html  dashboard_BAIXADA_SANTISTA.html  dashboard_BARRETOS.html  dashboard_BAURU.html  dashboard_BOTUCATU.html  dashboard_CAMPINAS.html  dashboard_CAPITAL_CENTRO.html  dashboard_CAPITAL_LESTE.html  dashboard_CAPITAL_LESTE_II.html  dashboard_CAPITAL_NORTE.html  dashboard_CAPITAL_OESTE.html  dashboard_CAPITAL_SUL.html  dashboard_CDE.html  dashboard_COMPLIANCE_E_PROTEÇÃO_DE_DADOS.html  dashboard_CULTURA_EMPREENDEDORA.html  dashboard_DAF.html  dashboard_DESENVOLVIMENTO_SETORIAL_E_TERRITORIAL.html  dashboard_DITEC.html  dashboard_FACULDADE_SEBRAE.html  dashboard_FINANÇAS_E_CONTROLADORIA.html  dashboard_FRANCA.html  dashboard_GESTÃO_DE_PESSOAS.html  dashboard_GESTÃO_DE_SOLUÇÕES_E_TRANSFORMAÇÃO_DIGITAL.html  dashboard_GESTÃO_ESTRATÉGICA.html  dashboard_GRANDE_ABC.html  dashboard_GUARATINGUETÁ.html  dashboard_GUARULHOS.html  dashboard_INFRAESTRUTURA_DA_INFORMAÇÃO.html  dashboard_INOVAÇÃO.html  dashboard_JUNDIAÍ.html  dashboard_JURÍDICO_E_SECRETARIA_GERAL.html  (+80 more)
(+63 files in other folders)
